# NLtoDataInsight

./: .gitignore  ACCURACY_TRADEOFF_README.md  CACHE_IMPROVEMENTS_SUMMARY.md  CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  STREAMING_IMPLEMENTATION_PLAN.md  TESTING_GUIDE.md  basic_usage.cpp  loader.cpp  loader.h  output.json  requirements.txt  setup_env.sh  superbuild.sh  time-note.md
.github/: copilot-instructions.md
AI-generated-artifacts/: plots_20251127_124827_revised.py
AI-generated-artifacts/Figure-1/: insight_20251130_131119.txt  plots_20251130_131119.py  query_20251130_131119.py
AI-generated-artifacts/Figure-10/: insight_20251202_205719.txt  plots_20251202_205719.py  query_20251202_205719.py
AI-generated-artifacts/Figure-3/: insight_20251201_163734.txt  plots_20251201_163734.py  query_20251201_163734.py
AI-generated-artifacts/Figure-5/: insight_20251202_044455.txt  plots_20251202_044455.py  plots_20251202_044455_revised.py  query_20251202_044455.py
AI-generated-artifacts/Figure-6/: insight_20251201_154509.txt  plots_20251201_154509.py  plots_20251201_154509_revised.py  query_20251201_154509.py
AI-generated-artifacts/Figure-7/: insight_20251121_140122.txt  plots_20251121_140122.py  plots_20251121_140122_revised.py  query_20251121_140122.py
AI-generated-artifacts/Figure-8/: insight_20251130_183825.txt  plots_20251130_183825.py  query_20251130_183825.py
AI-generated-artifacts/Figure-9/: insight_20251202_181223.txt  plots_20251202_181223.py  query_20251202_181223.py
AI-generated-artifacts/Figure-S5/: insight_20251202_190204.txt  plots_20251202_190204.py  plots_20251202_190204_revised.py  query_20251202_190204.py
AI-generated-artifacts/Figure-S6/: insight_20251202_202907.txt  plots_20251202_202907.py  plots_20251202_202907_revised.py  query_20251202_202907.py
AIdemo/: available_models.txt  conversation.txt
AIdemo/script/: Agent6.py  demo.ipynb  main.py  models.py  utils2.py
LLC2160_land_ocean_mask/: ieee_scivis_land_ocean_mask.ipynb  utils.py
LLC2160_land_ocean_mask/.ipynb_checkpoints/: utils-checkpoint.py
agent6-web-app/: .env.example  .gitignore  EMPIRICAL_BENCHMARKING.md  EMPIRICAL_BENCHMARKING_VISUAL.md  QUICK_START_PROFILER.md  README.md  docker-compose.yml  install-openvisus.txt
agent6-web-app/ai_data/: accuracy_sweep_ref0.csv
agent6-web-app/docs/: API_DOCS.md
agent6-web-app/src/: app.py
myenv/: pyvenv.cfg
paper1-files/: Full-resolution-Full-map-data-download-time.txt
paper1-files/GAD_text-agulhaas-2-90/: text_script_kf0.json  text_script_kf1.json  text_script_kf10.json  text_script_kf11.json  text_script_kf12.json  text_script_kf13.json  text_script_kf14.json  text_script_kf15.json  text_script_kf16.json  text_script_kf17.json  text_script_kf18.json  text_script_kf19.json  text_script_kf2.json  text_script_kf20.json  text_script_kf21.json  text_script_kf22.json  text_script_kf23.json  text_script_kf24.json  text_script_kf25.json  text_script_kf26.json  text_script_kf27.json  text_script_kf28.json  text_script_kf29.json  text_script_kf3.json  text_script_kf30.json  text_script_kf31.json  text_script_kf32.json  text_script_kf33.json  text_script_kf34.json  text_script_kf35.json  text_script_kf36.json  text_script_kf37.json  text_script_kf38.json  text_script_kf39.json  text_script_kf4.json  text_script_kf40.json  text_script_kf41.json  text_script_kf42.json  text_script_kf43.json  text_script_kf44.json  (+50 more)
paper1-files/GAD_text-agulhaas-2-ref/: text_script.json  text_script_data_list.json  text_script_kf0.json  text_script_kf1.json  text_script_kf10.json  text_script_kf11.json  text_script_kf12.json  text_script_kf13.json  text_script_kf14.json  text_script_kf15.json  text_script_kf16.json  text_script_kf17.json  text_script_kf18.json  text_script_kf19.json  text_script_kf2.json  text_script_kf20.json  text_script_kf21.json  text_script_kf22.json  text_script_kf23.json  text_script_kf24.json  text_script_kf25.json  text_script_kf26.json  text_script_kf27.json  text_script_kf28.json  text_script_kf29.json  text_script_kf3.json  text_script_kf30.json  (+65 more)
python/: download_vtk_ecco.py  render.py  renderInterface.py  renderInterface3.py  renderVTK.py  renderVTK2.py  script.py  scripting.py
renderingApps/: vtkfunctionalities.md
renderingApps/py/: CMakeLists.txt  osprayApps.cpp  utils.cpp  utils3.cpp  vtkApps.cpp  vtkApps2.cpp  vtkApps3.cpp
renderingApps/vtkApps/: CMakeLists.txt  vtkFuns.cpp  vtkFuns.h  vtkFuns2.cpp  vtkFuns2.h  vtkFuns3.cpp  vtkFuns3.h  vtkMain.cpp  vtkMain3.cpp
scripts/: test_bind_tools.py  test_bind_with_repo_tool.py
(+313 files in other folders)
